--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,13 +1,7 @@
 {
-  "version":2,
-  "builds": [ {
-    "src":"./index.js",
-    "use":"@vercel/node"
-  }],
-  "routes":[
-    {
-      "src":"/(.*)",
-      "dest":"/"
-    }
+  "builds": [
+    { "src": "*.html", "use": "@vercel/static" },
+    { "src": "*.py", "use": "@vercel/python" },
+    { "src": "*.js", "use": "@vercel/node" }
   ]
 }
