--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,4 @@
 {
-  "builds": [
-    { "src": "*.js", "use": "@vercel/node" }
-  ]
+  "builds": [{ "src": "*.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
